--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content button_one Aligner"> Welcome to the Digital Museum of Math
     </div>
 </aside>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
   <script src="sketch.js"></script>
   </body>
 </html>
